refactor dark editor styles for improved theming support

--- a/components/editor/dark-editor.css
+++ b/components/editor/dark-editor.css
@@ -1,7 +1,7 @@
 @import url("@radix-ui/colors/tomato-dark.css");
 @import url("@radix-ui/colors/mauve-dark.css");
 
-.dark-editor {
+.dark .dark-editor {
   --accentBase: var(--tomato-1);
   --accentBgSubtle: var(--tomato-2);
   --accentBg: var(--tomato-3);
